--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,8 @@
     }
   ],
   "ignore": [
-  	"bower_components",
-  	"stuff"
+    "bower_components",
+    "stuff"
   ],
   "dependencies": {
     "angular": "~1.3.8",
@@ -20,7 +20,11 @@
     "angular-pan-zoom": "~1.0.3",
     "victor": "~0.2.6",
     "angular-ui-layout": "~1.0.5",
-    "bootstrap-css-only": "~3.3.1"
+    "bootstrap-css-only": "~3.3.1",
+    "idbwrapper": "~1.4.1",
+    "three.js": "*",
+    "ColladaLoader": "https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/loaders/ColladaLoader.js",
+    "DDSLoader": "https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/loaders/DDSLoader.js"
   },
   "resolutions": {
     "angular": "~1.3.8"
