--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "idbwrapper": "~1.4.1",
     "three.js": "*",
     "ColladaLoader": "https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/loaders/ColladaLoader.js",
-    "DDSLoader": "https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/loaders/DDSLoader.js"
+    "DDSLoader": "https://raw.githubusercontent.com/mrdoob/three.js/master/examples/js/loaders/DDSLoader.js",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
+    "js-yaml": "~3.2.6"
   },
   "resolutions": {
     "angular": "~1.3.8"
