- Use correct naming

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Jorodox Mod Tool",
-  "productName": "Jorodox",
+  "name": "jorodox",
+  "productName": "Jorodox Mod Tool",
   "version": "0.8.0",
   "description": "Tool for assisting in creating mods for Paradox Development Studio games like Europa Universalis 4, Crusader Kings 2, Stellaris, and others.",
   "main": "./main.prod.js",
