--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jorodox Mod Tool",
+  "name": "jorodox",
   "productName": "Jorodox",
   "version": "0.8.0",
   "description": "Tool for assisting in creating mods for Paradox Development Studio games like Europa Universalis 4, Crusader Kings 2, Stellaris, and others.",
