--- a/package.json
+++ b/package.json
@@ -187,12 +187,17 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "antd": "^2.10.0",
+    "babel-plugin-import": "^1.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "electron-debug": "^1.1.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
+    "infinite-tree": "^1.10.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "3.0.0-beta.6",
+    "react-infinite-tree": "^0.6.1",
     "react-jss": "^6.1.1",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
