--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "cross-env": "^5.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.3",
-    "electron": "^1.6.10",
+    "electron": "1.7.9",
     "electron-builder": "^19.8.0",
     "electron-devtools-installer": "^2.2.0",
     "enzyme": "^2.9.1",
@@ -188,12 +188,14 @@
   },
   "dependencies": {
     "antd": "^2.13.4",
+    "bmp-js": "^0.0.3",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
     "filesize": "^3.5.10",
     "font-awesome": "^4.7.0",
     "fs-jetpack": "^0.13.3",
     "history": "^4.6.3",
+    "infinite-tree": "^1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
@@ -205,7 +207,8 @@
     "react-splitter-layout": "^0.2.1",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "tga": "^1.0.2"
   },
   "devEngines": {
     "node": ">=7.x",
