--- a/package.json
+++ b/package.json
@@ -211,11 +211,16 @@
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.5.0",
     "tga": "^1.0.2",
+    "three": "^0.87.1",
     "typeface-roboto": "^0.0.41"
   },
   "devEngines": {
     "node": ">=7.x",
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
+  },
+  "resolutions": {
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   }
 }
