--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "source-map-support": "^0.5.0",
     "tga": "^1.0.2",
     "three": "^0.87.1",
+    "three-addons": "^1.1.0",
     "typeface-roboto": "^0.0.41"
   },
   "devEngines": {
