* Data loading in background window

--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.3",
     "electron": "1.7.9",
-    "electron-builder": "^19.37.2",
+    "electron-builder": "^19.55.3",
     "electron-devtools-installer": "^2.2.1",
     "enzyme": "^3.1.0",
     "enzyme-to-json": "^3.1.4",
@@ -155,7 +155,7 @@
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react": "^7.6.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "fbjs-scripts": "^0.8.0",
@@ -174,7 +174,7 @@
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
-    "sinon": "^4.0.1",
+    "sinon": "^4.2.2",
     "spectron": "^3.7.0",
     "style-loader": "^0.19.0",
     "stylefmt": "^6.0.0",
@@ -189,6 +189,7 @@
   "dependencies": {
     "bmp-js": "^0.0.3",
     "devtron": "^1.4.0",
+    "dexie": "^2.0.1",
     "electron-debug": "^1.2.0",
     "filesize": "^3.5.11",
     "font-awesome": "^4.7.0",
@@ -196,8 +197,10 @@
     "history": "^4.6.3",
     "iconv-lite": "^0.4.19",
     "infinite-tree": "^1",
+    "lodash": "^4.17.4",
     "material-ui": "next",
-    "material-ui-icons": "next",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "mime": "^2.2.0",
     "project-version": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -214,7 +217,9 @@
     "tga": "^1.0.2",
     "three": "^0.87.1",
     "three-addons": "^1.1.0",
-    "typeface-roboto": "^0.0.41"
+    "typeface-roboto": "^0.0.41",
+    "webworker-promise": "^0.4.0",
+    "worker-loader": "^1.1.0"
   },
   "devEngines": {
     "node": ">=7.x",
