--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "devtron": "^1.4.0",
     "dexie": "^2.0.1",
     "electron-debug": "^1.2.0",
+    "electron-window-state-manager": "^0.3.2",
     "filesize": "^3.5.11",
     "font-awesome": "^4.7.0",
     "fs-jetpack": "^1.2.0",
@@ -207,6 +208,7 @@
     "react-hot-loader": "^3.1.1",
     "react-infinite-tree": "^0.7.1",
     "react-redux": "^5.0.5",
+    "react-redux-grid": "^5.5.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.8",
