--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
     "mime": "^2.2.0",
+    "node-csv-parse": "^1.2.0",
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
     "react": "^16.2.0",
