--- a/.eslintignore
+++ b/.eslintignore
@@ -51,3 +51,7 @@ main.js.map
 .idea
 npm-debug.log.*
 __snapshots__
+
+# references to older projects
+ye_olde_angular
+react-chrome-extension-boilerplate
