--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   },
   "rules": {
     "arrow-parens": ["off"],
+    "arrow-body-style": "off",
     "compat/compat": "error",
     "consistent-return": "off",
     "comma-dangle": "off",
@@ -22,16 +23,20 @@
     "no-console": "off",
     "no-use-before-define": "off",
     "no-multi-assign": "off",
+    "max-len": ["error", {"code": 160}],
+    "prefer-const": ["error", {"destructuring": "any"}],
     "promise/param-names": "error",
     "promise/always-return": "error",
     "promise/catch-or-return": "error",
     "promise/no-native": "off",
+    "object-curly-spacing": ["error", "never"],
     "react/sort-comp": ["error", {
       "order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]
     }],
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": "off"
+
   },
   "plugins": [
     "flowtype",
