--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "devtron": "^1.4.0",
     "dexie": "^2.0.1",
     "electron-debug": "^1.5.0",
+    "electron-in-page-search": "^1.3.1",
     "electron-window-state": "^4.1.1",
     "filesize": "^3.5.11",
     "font-awesome": "^4.7.0",
