- Add DeleteRelated task to recursively delete 'source'

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,8 +38,8 @@
     }],
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": "off"
-
+    "react/prefer-stateless-function": "off",
+    "prefer-template": "off"
   },
   "plugins": [
     "flowtype",
