--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "csv-parse": "^2.1.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.1",
