- Testing 'ItemGrid' for a faster grid using 'react-virtualized'

--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
     "project-version": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-draggable": "^3.0.5",
     "react-hot-loader": "^4.0.0-beta.13",
     "react-infinite-tree": "^0.7.1",
     "react-redux": "^5.0.6",
@@ -220,6 +221,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-splitter-layout": "^3.0.0",
+    "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.5.3",
