- Add DDS image viewer (via ThreeJS) - Switched to latest material-ui version - Move csv-parse to app package.json

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "bmp-js": "^0.0.3",
-    "fs-jetpack": "^1.2.0"
+    "fs-jetpack": "^1.2.0",
+    "csv-parse": "^2.1.0"
   }
 }
