--- a/package.json
+++ b/package.json
@@ -191,7 +191,6 @@
   "dependencies": {
     "async": "^2.6.0",
     "bmp-js": "^0.0.3",
-    "csv-parse": "^2.1.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.1",
     "electron-debug": "^1.5.0",
@@ -204,10 +203,9 @@
     "infinite-tree": "^1",
     "lodash": "^4.17.4",
     "luaparse": "^0.2.1",
-    "material-ui": "next",
-    "material-ui-icons": "^1.0.0-beta.17",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
     "mime": "^2.2.0",
-    "node-csv-parse": "^1.2.0",
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
     "react": "^16.2.0",
