- Put fork/main node thread files outside of regular asar packaging

--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
       "dist/",
       "node_modules/",
       "app.html",
+      "utils/FsUtils.js",
+      "utils/ForkIndexedBmp.js",
+      "utils/tasks/IndexedBmpParserForkTask.js",
+      "utils/IndexedBmp.js",
       "background.html",
       "main.prod.js",
       "main.prod.js.map",
