--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": "off",
-    "prefer-template": "off"
+    "prefer-template": "off",
+    "no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }]
   },
   "plugins": [
     "flowtype",
