--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.9",
     "detect-port": "^1.2.2",
-    "electron": "^1.7.11",
+    "electron": "2.0.4",
     "electron-builder": "^19.55.3",
     "electron-devtools-installer": "^2.2.3",
     "electron-rebuild": "^1.7.3",
@@ -212,6 +212,7 @@
     "json-schema-traverse": "^0.4.1",
     "lodash": "^4.17.4",
     "luaparse": "^0.2.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "mime": "^2.2.0",
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
