--- a/package.json
+++ b/package.json
@@ -193,22 +193,22 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "@material-ui/core": "latest",
+    "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "latest",
-    "ajv": "^6.5.1",
-    "ajv-merge-patch": "^3.0.0",
+    "ajv": "^6.5.2",
+    "ajv-merge-patch": "^4.1.0",
     "async": "^2.6.0",
-    "bmp-js": "^0.0.3",
+    "bmp-js": "^0.1.0",
     "devtron": "^1.4.0",
     "dexie": "^2.0.1",
-    "electron-debug": "^1.5.0",
+    "electron-debug": "^2.0.0",
     "electron-in-page-search": "^1.3.1",
     "electron-window-state": "^4.1.1",
     "filesize": "^3.5.11",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "iconv-lite": "^0.4.19",
-    "infinite-tree": "^1",
+    "infinite-tree": "^1.16.2",
     "json-schema-traverse": "^0.4.1",
     "lodash": "^4.17.4",
     "luaparse": "^0.2.1",
@@ -217,32 +217,32 @@
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-draggable": "^3.0.5",
     "react-hot-loader": "^4.0.0-beta.13",
     "react-infinite-tree": "^0.7.1",
     "react-redux": "^5.0.6",
     "react-redux-grid": "^5.5.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.7",
     "react-splitter-layout": "^3.0.0",
-    "react-virtualized": "^9.18.5",
+    "react-virtualized": "^9.20.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "source-map-support": "^0.5.3",
     "tga": "^1.0.2",
-    "three": "^0.87.1",
+    "three": "^0.94.0",
     "three-addons": "^1.1.0",
-    "typeface-roboto": "^0.0.41",
+    "typeface-roboto": "^0.0.54",
     "uri-js": "^4.2.2",
     "webworker-promise": "^0.4.0",
-    "worker-loader": "^1.1.0",
+    "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.2"
   },
   "devEngines": {
-    "node": ">=7.x",
+    "node": ">=8.9",
     "npm": ">=4.x",
     "yarn": ">=0.21.3"
   }
