--- a/package.json
+++ b/package.json
@@ -125,12 +125,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.1.0",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-flow-runtime": "^0.15.0",
+    "babel-plugin-flow-runtime": "^0.17.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.6.1",
@@ -140,57 +140,58 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "chalk": "^2.3.0",
-    "concurrently": "^3.5.1",
-    "cross-env": "^5.1.3",
+    "concurrently": "^3.6.0",
+    "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.4",
-    "css-loader": "^0.28.9",
+    "css-loader": "^1.0.0",
     "detect-port": "^1.2.2",
     "electron": "2.0.4",
-    "electron-builder": "^19.55.3",
+    "electron-builder": "^20.19.2",
     "electron-devtools-installer": "^2.2.3",
-    "electron-rebuild": "^1.7.3",
+    "electron-rebuild": "^1.8.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-formatter-pretty": "^1.3.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-plugin-compat": "^2.2.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-plugin-compat": "^2.4.0",
     "eslint-plugin-flowtype": "^2.42.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "next",
     "fbjs-scripts": "^0.8.1",
     "file-loader": "^1.1.6",
-    "flow-bin": "^0.64.0",
-    "flow-runtime": "^0.16.0",
-    "flow-typed": "^2.3.0",
+    "flow-bin": "^0.76.0",
+    "flow-runtime": "^0.17.0",
+    "flow-typed": "^2.5.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.1.4",
+    "jest": "^23.3.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.1",
     "npm-logical-tree": "^1.2.1",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.4.1",
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "sinon": "^4.2.2",
+    "sass-loader": "^7.0.3",
+    "sinon": "^6.1.3",
     "spectron": "^3.8.0",
-    "style-loader": "^0.20.1",
+    "style-loader": "^0.21.0",
     "stylefmt": "^6.0.0",
-    "stylelint": "^8.4.0",
+    "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.0.0",
-    "uglifyjs-webpack-plugin": "1.1.8",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.15.1",
     "webpack-bundle-analyzer": "^2.9.2",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^4.1.1"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
