- Move definitions to JSON + outside of packed dir - Add some app loading progress reporting

--- a/package.json
+++ b/package.json
@@ -47,6 +47,13 @@
       "main.prod.js.map",
       "package.json"
     ],
+    "extraFiles": [
+      {
+        "from": "definitions",
+        "to": "definitions",
+        "filter": ["**/*.json"]
+      }
+    ],
     "dmg": {
       "contents": [
         {
