--- a/definitions/eu4/schemas/user_interface/interface_gui_overlapping_elements_boxes.json
+++ b/definitions/eu4/schemas/user_interface/interface_gui_overlapping_elements_boxes.json
@@ -23,31 +23,33 @@
   ],
   "definitions": {
     "overlapping_elements_box_type": {
-      "type": "object",
-      "additionalProperties": false,
-      "properties": {
-        "name": {
-          "type": "string"
+      "$mergeProps": [
+        {
+          "$ref": "interface_gui_basetypes.json#/definitions/base_type"
         },
-        "position": {
-          "$ref": "special_values.json#/definitions/coordinate_xy"
-        },
-        "size": {
-          "$ref": "special_values.json#/definitions/coordinate_xy"
-        },
-        "spacing": {
-          "type": "number"
-        },
-        "format": {
-          "$ref": "special_values.json#/definitions/gui_format"
-        },
-        "orientation": {
-          "$ref": "special_values.json#/definitions/gui_orientation"
-        },
-        "Orientation": {
-          "$ref": "special_values.json#/definitions/gui_orientation"
+        {
+          "properties": {
+            "position": {
+              "$ref": "special_values.json#/definitions/coordinate_xy"
+            },
+            "size": {
+              "$ref": "special_values.json#/definitions/coordinate_xy"
+            },
+            "spacing": {
+              "type": "number"
+            },
+            "format": {
+              "$ref": "special_values.json#/definitions/gui_format"
+            },
+            "orientation": {
+              "$ref": "special_values.json#/definitions/gui_orientation"
+            },
+            "Orientation": {
+              "$ref": "special_values.json#/definitions/gui_orientation"
+            }
+          }
         }
-      }
+      ]
     }
   }
 }
