--- a/definitions/eu4/schemas/map_data/map_season.json
+++ b/definitions/eu4/schemas/map_data/map_season.json
@@ -48,7 +48,7 @@
       "minItems": 3,
       "maxItems": 3,
       "items": {
-        "$ref": "special_values.json#/definitions/float"
+        "type": "number"
       }
     }
   }
