- More schema tweaks (gui, gfx_particles)

--- a/definitions/eu4/schemas/user_interface/interface_gui_overlapping_elements_boxes.json
+++ b/definitions/eu4/schemas/user_interface/interface_gui_overlapping_elements_boxes.json
@@ -46,6 +46,9 @@
             },
             "Orientation": {
               "$ref": "special_values.json#/definitions/gui_orientation"
+            },
+            "hint_tag": {
+              "$ref": "identifiers.json#/definitions/hints"
             }
           }
         }
