- Add some icons

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     },
     "nsis": {
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "icon-256-circular.ico"
     }
   },
   "repository": {
