--- a/package.json
+++ b/package.json
@@ -230,8 +230,11 @@
     "luaparse": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "mime": "^2.2.0",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
+    "node-uuid": "^1.4.8",
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
     "prop-types": "^15.6.2",
