--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.4.11",
     "bmp-js": "^0.0.3",
     "csv-parse": "^2.1.0",
     "fs-jetpack": "^1.2.0"
