--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-mobx": "^1.0.3",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-react-optimize": "^1.0.1",
@@ -230,8 +231,12 @@
     "luaparse": "^0.2.1",
     "material-design-icons-iconfont": "^3.0.3",
     "mime": "^2.2.0",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
+    "mobx-react-router": "^4.0.4",
     "moo": "^0.4.3",
     "nearley": "^2.13.0",
+    "node-uuid": "^1.4.8",
     "object-hash": "^1.2.0",
     "project-version": "^1.0.0",
     "prop-types": "^15.6.2",
