--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
     "compat/compat": "error",
     "consistent-return": "off",
     "comma-dangle": "off",
+    "no-await-in-loop": "off",
+    "prefer-destructuring": "off",
     "generator-star-spacing": "off",
     "import/no-unresolved": "error",
     "import/no-extraneous-dependencies": "off",
