--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,22 @@
 {
   "name": "JoroDox Tools",
   "version": "0.8.0",
+  "description": "Tools to help mod Paradox Interactive's Grand Strategy video games.",
+  "page": "https://github.com/DaanBroekhof/JoroDox",
   "manifest_version": 3,
   "minimum_chrome_version": "88",
   "background": {
     "service_worker": "backgroundServiceWorker.js",
     "type": "module"
+  },
+  "action": {
+    "default_icon": {
+      "16": "img/icon-16.png",
+      "32": "img/icon-32.png",
+      "48": "img/icon-48.png",
+      "128": "img/icon-128.png"
+    },
+    "default_title": "Open Jorodox Tools"
   },
   "icons" : {
     "16": "img/icon-16.png",
